patientdetailsservice/kube/deployment-istio-1.yml


apiVersion: v1
kind: Service
metadata:
  name: patient-details-service
  
  labels:
    app: patient-details-service
spec:
  type: NodePort
  ports:
  - port: 3000
    name: http-patient-details
  selector:
    app: patient-details-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: patient-details-service-v1
  
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: patient-details-service
        version: v1
    spec:
      containers:
      - name: patient-details-service
        image: frankiennamdi/patientdetailsservice:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: patient-details-service-v2
  
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: patient-details-service
        version: v2
    spec:
      containers:
      - name: patient-details-service
        image: frankiennamdi/patientdetailsservice:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: patient-details-service
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /details-service
    route:
    - destination:
        host: patient-details-service
        port:
          number: 3000
