patientdetailsservice/kube/deployment-istio.yml


apiVersion: v1
kind: Service
metadata:
  name: patient-details-service
  
  labels:
    app: patient-details-service
spec:
  type: NodePort
  ports:
  - port: 3000
    name: http-patient-details
  selector:
    app: patient-details-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: patient-details-service-v1
  
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: patient-details-service
        version: v1
    spec:
      containers:
      - name: patient-details-service
        image: frankiennamdi/patientdetailsservice:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: patient-details-service-v2
  
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: patient-details-service
        version: v2
    spec:
      containers:
      - name: patient-details-service
        image: frankiennamdi/patientdetailsservice:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: patient-details-service
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /patient/details.*
        backend:
          serviceName: patient-details-service
          servicePort: 3000
---
